The p2 tests (AccountViewTest.java, AdminLoggedInViewTest.java, AdminViewTest.java, AdvancedSearchViewTest.java, DeleteUserViewTest.java) still cannot run properly. If you simply copy and paste the other tests (view part and interactor part) into your branch, they should run. It’s best not to merge, because the entity classes here, such as Post.java and Message.java, may have issues.